# run-perf

./: .codeclimate.yml  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
contrib/: bisect.sh  rpm_links.py  sample_bisecter_bisect.sh  upstream_qemu_bisect.sh
contrib/container/: Dockerfile
contrib/data_analysis/: extract_data.py
contrib/setup_scripts/: fio-compile-nbd.sh  fio-fedora-3.19.sh  upstream_qemu.sh
docs/source/: conf.py  container.rst  contribution.rst  downstream.rst  index.rst  introduction.rst  jenkins.rst  results.rst  scripts.rst
docs/source/_static/: html_result.html
docs/source/jenkins/: compareperf.groovy  diagram.odg  identify.groovy  jobs.yaml  jobs.yml  multi_runperf.groovy  prune_artifacts.py  publish-results-git.groovy  runperf.groovy  upstream_bisect.groovy  vars_runperf.groovy
runperf/: __init__.py  contrib.py  exceptions.py  html_report.py  machine.py  profiles.py  provisioners.py  result.py  tests.py  version.py
runperf/assets/: pbench-agent.cfg  pbench-devel.repo
runperf/assets/html_report/: report_template.html  report_template.html.variables
runperf/assets/pbench/: libblkio.fio  nbd-check.fio  nbd.fio
runperf/assets/profiles/TunedLibvirt/: rc.local.sh
runperf/assets/tests/DummyTest/: result.json
runperf/contrib/: bisect.sh  bisecter_bisect.sh  rpm_links.py
runperf/contrib/data_analysis/: extract_data.py
runperf/contrib/setup_scripts/: linpack-fedora.sh
runperf/utils/: __init__.py  cloud_image_providers.py  pbench.py
scripts/: analyze-perf  compare-perf  diff-perf  run-perf  strip-run-perf
selftests/: run  run_coverage
selftests/.assets/hosts/: addr.yaml  addr2.yaml
selftests/.assets/libvirt/: addr-tuned.xml
selftests/.assets/results/: data.csv  result.xunit
selftests/.assets/results/1_base/: linear_model.json  stddev_model.json
selftests/.assets/results/1_base/result_20200726_080654/: RUNPERF_METADATA
selftests/.assets/results/2_kernel_update/: rebased_model.json
selftests/.assets/tests/: PBenchTestResult.json
selftests/assets/results/1_base/: linear_model.json
selftests/compare-perf/: test_compareperf.py
selftests/core/: __init__.py  test_analyzeperf.py  test_compareperf.py  test_diffperf.py  test_machine.py  test_profiles.py  test_result.py  test_runperf.py  test_tests.py
selftests/run-perf/: __init__.py  test_profiles.py  test_runperf.py  test_tests.py
selftests/utils/: test_utils.py
(+39 files in other folders)
