[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "runperf"
description = "Helper to execute perf-beaker-tasks locally or in VM"
readme = "README.rst"
license = "GPL-2.0-or-later"
authors = [
    {name = "Lukas Doktor", email = "ldoktor@redhat.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "aexpect>=1.5.1",
    "PyYAML",
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "inspektor",
    "Sphinx",
    "jinja2",
    "build",
]

[project.urls]
Homepage = "https://github.com/distributed-system-analysis/run-perf"

[project.entry-points."runperf.profiles"]
"50Localhost" = "runperf.profiles:Localhost"
"50DefaultLibvirt" = "runperf.profiles:DefaultLibvirt"
"50DefaultLibvirtMulti" = "runperf.profiles:DefaultLibvirtMulti"
"50Overcommit1_5" = "runperf.profiles:Overcommit1p5"
"50TunedLibvirt" = "runperf.profiles:TunedLibvirt"

[project.entry-points."runperf.tests"]
"50DummyTest" = "runperf.tests:DummyTest"
"50PBenchFio" = "runperf.tests:PBenchFio"
"50Linpack" = "runperf.tests:Linpack"
"50UPerf" = "runperf.tests:UPerf"
"50PBenchNBD" = "runperf.tests:PBenchNBD"
"50PBenchLibblkio" = "runperf.tests:PBenchLibblkio"

[project.entry-points."runperf.machine.distro_info"]
"50get_distro_info" = "runperf.machine:get_distro_info"

[project.entry-points."runperf.utils.cloud_image_providers"]
"50Fedora" = "runperf.utils.cloud_image_providers:Fedora"

[project.entry-points."runperf.provisioners"]
"50Beaker" = "runperf.provisioners:Beaker"

[project.entry-points."runperf.utils.pbench"]
"50Dnf" = "runperf.utils.pbench:Dnf"

[tool.setuptools.packages.find]
exclude = ["selftests*"]

[project.scripts]
runperf-contrib-path = "runperf.contrib:main"

[tool.setuptools.package-data]
"*" = ["assets/**/*", "contrib/**/*"]

[tool.setuptools]
script-files = [
    "scripts/run-perf",
    "scripts/analyze-perf",
    "scripts/compare-perf",
    "scripts/diff-perf",
    "scripts/strip-run-perf",
]

[tool.setuptools_scm]
# Version format:
# - Tagged release: X.Y.Z (e.g., 1.2)
# - Development: X.Y.devN+gHASH (e.g., 1.2.dev86+g62d6338)
# - Dirty: X.Y.devN+gHASH.dirty (e.g., 1.2.dev86+g62d6338.dirty)
local_scheme = "dirty-tag"
